src/base/objects/CX_Metrics_Dashboard__c/CX_Metrics_Dashboard__c.object-meta.xml
<CustomObject>
    <label>CX Metrics Dashboard</label>
    <nameField>
        <label>Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CX Metrics Dashboard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>