src/base/objects/CX_Metrics_Dashboard__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>