src/base/objects/CX_Metrics_Dashboard__c/fields/Accts_with_Active_Asset_WoW__c.field-meta.xml
<CustomField>
    <fullName>Accts_with_Active_Asset_WoW__c</fullName>
    <label>Accts with Active Assets WoW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>