src/base/objects/CX_Metrics_Dashboard__c/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <label>Asset Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>