src/base/objects/CX_Metrics_Dashboard__c/fields/Total_Absolute_Churned_Accounts_WoW__c.field-meta.xml
<CustomField>
    <fullName>Total_Absolute_Churned_Accounts_WoW__c</fullName>
    <label>Total Absolute Churned Accounts WoW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>