src/base/objects/CX_Metrics_Dashboard__c/fields/Total_Active_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Assets__c</fullName>
    <label>Total Active Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>