src/base/objects/CX_Metrics_Dashboard__c/fields/Total_Churned_Assets_WoW__c.field-meta.xml
<CustomField>
    <fullName>Total_Churned_Assets_WoW__c</fullName>
    <label>Total Churned Assets (WoW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>